k8s/helm/kibana/kibana-ingress-uat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "kibana-uat-kibana"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
  name: kibana-ingress
  namespace: uat
spec:
  tls:
  - hosts:
    - kibana.kauri.io
    secretName: uat-kibana-tls
  rules:
    - host: kibana.kauri.io
      http:
        paths:
          - backend:
              serviceName: kibana-uat
              servicePort: 443
            path: /
